<resources>
    <string name="app_name">Luka Ndako</string>
    <string name="appCenter_secret">578166e2-85d1-42b1-a093-72b6f11dd7ce</string>
    <string name="Dashboard">Acceuil</string>
    <string name="Feed">Feeds</string>
    <string name="my_posts">Liste postes</string>
    <string name="help_support"><![CDATA[Aide & Support]]></string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Quitter</string>
    <string name="header_email">Email</string>
    <string name="header_Username">Nom d\'utilisateur</string>
    <string name="picture">image profile</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="ui_detail">Details</string>
    <string name="feed_detail_image">feed image detail</string>
    <string name="feed_author">posté par:</string>
    <string name="feed_town">Ville</string>
    <string name="feed_area">Commune</string>
    <string name="divider_bullet">•</string>
    <string name="feed_title">Titre</string>
    <string name="feed_number_room">Nombre de pièce :</string>
    <string name="feed_room">Room</string>
    <string name="feed_price">Prix :</string>
    <string name="feed_guaranty">Garantie :</string>
    <string name="specification">Specifications</string>
    <string name="devise">USD</string>
    <string name="empty_post">Aucun poste disponible.</string>
    <string name="post_add">Nouveau Poste</string>
    <string name="type_post">Type</string>
    <string name="ui_save">Enregistrer</string>
    <string name="ui_cencel">Annuler</string>
    <string name="type">type</string>
    <string name="secret">578166e2-85d1-42b1-a093-72b6f11dd7ce</string>

    <string-array name="type_post">
        <item>Studio</item>
        <item>Hotel</item>
        <item>Bureau</item>
        <item>Habitation</item>
    </string-array>
    <string-array name="number_of_room">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

</resources>
