<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/colorAccent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
            android:id="@+id/headerProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/picture"
    />

    <TextView
            android:id="@+id/headerUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/header_Username"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
            android:id="@+id/headerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_email"/>

</LinearLayout>

