<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="E0E0E0"
        tools:context=".ui.base.activity.BaseActivity">
    <ImageView
            android:id="@+id/feedImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:alpha="1.0"
            android:scaleType="centerCrop"
            android:contentDescription="@string/feed_detail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <View android:layout_width="match_parent"
          android:layout_height="200dp"
          android:background="@drawable/gradient_up"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:id="@+id/view"/>
    <TextView
            android:id="@+id/feedAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_author"
            style="@style/AppTheme.Caption"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"/>
    <TextView

            android:text="@string/feed_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feedTown"
            style="@style/AppTheme.Subtitle" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/feedAuthor" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/feed_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feedArea"
            style="@style/AppTheme.Subtitle"
            app:layout_constraintStart_toEndOf="@+id/divider"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/feedTown"/>
    <TextView
            android:text="@string/divider_bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divider"
            style="@style/AppTheme.FeedText"
            app:layout_constraintStart_toEndOf="@+id/feedTown"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/feedTown"/>
    <TextView
            android:text="@string/feed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feedTitle"
            style="@style/AppTheme.Headline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/feedTown"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addToFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="@+id/feedImageView"/>
    <TextView
            android:text="@string/feed_number_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textForRoom"
            style="@style/AppTheme.Text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
    <TextView
            android:text="@string/feed_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feedRoom"
            style="@style/AppTheme.Text"
            app:layout_constraintTop_toTopOf="@+id/textForRoom"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="128dp" android:id="@+id/guideline"/>
    <TextView
            android:text="@string/feed_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Text"
            android:id="@+id/textForfeedPrice" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textForRoom" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/feed_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feedPrice"
            style="@style/AppTheme.Text"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textForfeedPrice"/>
    <TextView
            android:id="@+id/textForGuaranty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Text"
            android:text="@string/feed_guaranty"
            app:layout_constraintTop_toBottomOf="@id/textForfeedPrice"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/feed_guaranty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feedGuaranty"
            style="@style/AppTheme.Text"
            app:layout_constraintTop_toTopOf="@+id/textForGuaranty"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/specification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/specText" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textForGuaranty" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spec_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/specText"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            tools:listitem="@layout/feed_item_spec"/>


</androidx.constraintlayout.widget.ConstraintLayout>