<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/graph_main"
            app:startDestination="@id/FeedListFragment">

    <fragment android:id="@+id/FeedListFragment"
              android:name="com.lemondropsarl.luka.ui.main.feed.FeedListFragment"
              android:label="@string/Feed"
              tools:layout="@layout/feed_list_fragment">
        <action android:id="@+id/detail"
                app:destination="@id/FeedDetailFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment android:id="@+id/FeedDetailFragment"
              android:name="com.lemondropsarl.luka.ui.main.feed.FeedDetailFragment"
              android:label="@string/feed_detail"
              tools:layout="@layout/feed_detail_fragment">
        <argument android:name="feedId" app:argType="string"/>

    </fragment>

    <fragment android:name="com.lemondropsarl.luka.ui.main.home.HomeFragment"
              android:id="@+id/HomeFragment"
              android:label="Home"
              tools:layout="@layout/fragment_home"/>

    <fragment android:id="@+id/PostListFragment"
              android:name="com.lemondropsarl.luka.ui.main.post.PostListFragment"
              android:label="@string/my_posts"
              tools:layout="@layout/post_list_fragment">
        <action android:id="@+id/add"
                app:destination="@id/PostAddFragment"/>
    </fragment>

    <fragment android:id="@+id/PostAddFragment"
              android:name="com.lemondropsarl.luka.ui.main.post.PostAddFragment"
              android:label="@string/post_add"
              tools:layout="@layout/post_add_fragment"/>


</navigation>