<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/feed_town"
            android:ems="10"
            android:id="@+id/editCity"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/postImageView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/feed_area"
            android:ems="10"
            android:id="@+id/editArea"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/postImageView" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editCity"/>
    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars[0]"
            android:id="@+id/postImageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintCircleRadius="50dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    <TextView
            android:text="@string/feed_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editCity"/>
    <TextView
            android:text="@string/feed_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editArea"/>
    <TextView
            android:text="@string/feed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/editTitle"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/feed_title"
            android:ems="10"
            android:id="@+id/editTitle" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editArea" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/feed_number_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spRoom"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTitle"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/type_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/spRoom"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spType" app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/feed_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editPrice"/>
    <EditText
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editPrice"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:singleLine="true" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/feed_guaranty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toEndOf="@+id/editPrice"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editPrice"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editGuaranty"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/spType" app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/devise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/editPrice"/>
    <TextView
            android:text="@string/devise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/editGuaranty" android:layout_marginEnd="11dp"
            app:layout_constraintTop_toBottomOf="@+id/spType" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/specification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editPrice"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editSpec"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
            style="@android:style/Widget.DeviceDefault.EditText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/ui_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>